--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Vansh Rewaskar<br />
 						Portfolio</h1>
-						<p>Data Analyst skilled in  SQL, Tableau, and Python <a href="https://github.com/Vansh956957">@github</a></p>
+						<p>Data Analyst skilled in  SQL, Power BI, and Python <a href="https://github.com/Vansh956957">@github</a></p>
 												<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
