--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 							
 							<li><a href="https://www.linkedin.com/in/vansh-rewaskar-b8284a22a/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/Vansh956957" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.hackerrank.com/profile/vanshrewaskar18" class="icon brands fa-hackerrank"><span class="label">HackerRank</span></a></li>
+							
 						</ul>
 					</nav>
 
